# MetasequoiaImeTsf

./: .clangd  CMakeLists.txt  CMakeUserPresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
scripts/: lsign.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt
src/: DllMain.cpp
src/Candidate/: EnumTfCandidates.cpp  EnumTfCandidates.h  SearchCandidateProvider.cpp  SearchCandidateProvider.h  TipCandidateList.cpp  TipCandidateList.h  TipCandidateString.cpp  TipCandidateString.h
src/Compartment/: Compartment.cpp
src/Composition/: Composition.cpp  CompositionProcessorEngine.cpp  CompositionProcessorEngine.h  EndComposition.cpp
src/DisplayAttribute/: DisplayAttribute.cpp
src/Edit/: GetTextExtentEditSession.cpp  TextEditSink.cpp
src/Global/: FanyDefines.h  Globals.cpp  Globals.h
src/IME/: FunctionProviderSink.cpp  MetasequoiaIME.cpp  MetasequoiaIME.h  MetasequoiaIMEBaseStructure.h
src/IPC/: Ipc.cpp  Ipc.h
src/Key/: KeyEventSink.cpp  KeyHandler.cpp  KeyHandlerEditSession.cpp  KeyHandlerEditSession.h  KeyStateCategory.cpp  KeyStateCategory.h
src/LanguageBar/: LanguageBar.cpp
src/Tf/: TfTextLayoutSink.cpp
src/Thread/: ThreadFocusSink.cpp  ThreadMgrEventSink.cpp
src/UI/: CandidateListUIPresenter.cpp  CandidateListUIPresenter.h  CandidateSessionState.cpp  CandidateSessionState.h
src/Utils/: FanyUtils.cpp  PerfTimer.h
src/Window/: CandidateWindow.cpp  CandidateWindow.h
